css/layout.css
body, #profile, #resume, .resume-item{
		overflow-x: hidden;
}

body{
	background-color: #fafafa;
}


/* make text selection respective color */
::selection {
  background: #010101; /* WebKit/Blink Browsers */
  color: white;
}
::-moz-selection {
  background: #010101; /* Gecko Browsers */
  color: white;
}

#thanks .contact-icons{
	position: relative;
	margin: 15px auto 15px auto;
}

#thanks{
	background-color: #444;
}
#thanks p, #thanks h3{
	padding-top: 1em;
	padding-bottom: 1em;
	color: #fafafa;
}

#thanks h5{
	color: white;
}	

#thanks h6{
	color: #ebebeb;
	font-size: 0.6em;
	font-weight: 300;
	margin-top: 2em;
	margin-bottom: 1.5em;
	line-height: 1.6em;
}

#thanks .description{
	max-width: 100%;
	margin: 0 auto;
	text-align: center;
}


/* (side) profile */
#profile{
	font-family: 'Montserrat', sans-serif;
	width: 35%;
	min-width: 275px;
	height: 100%;
	position: fixed;
	background-color: rgb(241, 177, 68);
	background-image: url('../assets/background.jpg');
	color: #fafafa;
	text-align: center;	
	z-index: 1;
	overflow-y: hidden;

	-webkit-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.3);
	-moz-box-shadow:    1px 1px 20px 0px rgba(50, 50, 50, 0.3);
	box-shadow:         1px 1px 20px 0px rgba(50, 50, 50, 0.3);
}

#profile-gradient{

	width: 100vw;
	height: 18%;
	position: absolute;
	bottom: 0;

	background-image: linear-gradient(180deg, transparent 0%, rgba(41, 39, 39, 0.39) 100%);
}

#info{
	height: 50vh;
	display: table;
	width: 100%;
}
#info-holder{
	display: table-cell;
	vertical-align: middle;
	margin: 0 auto;

}

#profession{
	font-family: 'Montserrat', sans-serif;
	font-size: 0.7em;
	font-weight: 400;
	padding: 15px 0;

	line-height: 0;
	letter-spacing: 4px;
}

#profile-name{
	margin: 10px 0;
}

#profile-name p{
    color: #fafafa;
	font-family: 'Montserrat', sans-serif;
	font-size: 2em;
	font-weight: 700;
	letter-spacing: 5px;
}

.profile-hr{
	width: 60px;
	border: 1px solid #fafafa;
	margin: 35px auto;
}
#short-description{
	
	font-family: "Open Sans", sans-serif;
	font-weight: 300;
	line-height: 1.6em;
	font-size: 0.9em;
	letter-spacing: 0.4px;
	max-width: 250px;
	margin: 0 auto;
	padding: 0px 20px;
}


#img-profile-holder{

    position: absolute;
    overflow: hidden;    
    width: 100%;
    height: 100vh;
}

#img-profile-holder a{

	position: absolute;
    width: 100%;
    left: 0;
    bottom: 0;
    text-align: center;
}

#img-profile{
	height: 50vh;
	vertical-align: bottom;
}

.contact-icons{
	position: absolute;
	width: 100%;
	bottom: 2vh;
}

.contact-icons ul li{

	display: inline;
  	list-style-type: none;
 	padding-left: 10px;
  	padding-right: 10px;
}

.contact-icons ul li a img{
	height: 3.2vh;
	opacity: 1;
}


.reduced-size{
		height: 3vh !important;
}

.contact-icons ul li a img:hover{
	opacity: 0.85;
}


/* 			resume 															*/
#resume{
	background-color: #fafafa;
	font-family: 'Montserrat', sans-serif;
	font-weight: 400;
	letter-spacing: 0.01em;
	width: 65%;
	overflow-y: scroll;
	left:35%;
	color: #010101;
	position: relative;
}

.resume-item{
	padding: 65px;
	display: flex;
	display: -webkit-flex; /* safari support */
	flex-direction: row;
	flex-wrap: wrap;

}

/* makes background */
.resume-item:nth-child(2n+1){
	background: white;
}

.resume-item .subject{

	width: 15%;
	text-align: left;
	align-self: flex-start;
	flex-grow: 1;
	-webkit-flex-grow: 1; /* safari support */
	
}
.subject h3{

	font-family: 'Montserrat', sans-serif;
	word-wrap: break-word;
	margin-top: 5px;
	color: #444;
	font-size: 13px;
	letter-spacing: 0.5px;
	font-weight: 400;

}

.resume-item .description{
	opacity: 0.8;
	width: 50%;
	height: auto;
	font-family: 'Montserrat', sans-serif;
	/*margin: auto;*/
	flex-grow: 7;
	-webkit-flex-grow: 7; /* safari support */
}

.job-item{

	/* inner content, for EXPERIENCE SECTION*/
	display: flex;
	display: -webkit-flex; /* safari support */
	flex-direction: row;
	flex-wrap: wrap;
}

.job-position{
	margin: 7px 0;
	width: 30%;
	flex-grow: 1;
	-webkit-flex-grow: 1; /* safari support */
}

.job-description{
	margin: 5px 0 8px 30px;
	width: 60%;
	flex-grow: 9;
	-webkit-flex-grow: 9; /* safari support */

}
.job-position p, .job-position h5{
	font-size: 13px !important ;
	line-height: 1.2em;
}

.job-position p{
	opacity: 0.6;
}

/* Base text style */
.description p, li{
	font-family: "Open Sans";
	font-weight: 400;
	font-size: 13px;
	color: #5b5b5b;
	line-height: 22px;
}

.resume-item:last-child{
	padding-bottom: 1em;
	background-color: whiteSmoke; 
}

h5.description{
	margin-top: 2px;
	margin-bottom: 2em;
	line-height: 1.5em;
}

h6.description{
	font-size: 0.6em;
	margin-top: 3em;
	color: #cacaca;
}

/* consecutive paragraphs */

/* select .smaller that are right after p tags */
p + .smaller{
	font-size: 0.8em;
	margin: 0.5em 0 1em 0;
	color: gray;
}

p + .smaller:last-child{
	margin-bottom: 0;
}


.content-divider{
	background-color: #ddd;
	height: 1px;
	margin-top: -8px;
	margin-left: 60px;
}

.skills-list li{
	margin-left: 12px; 
	list-style: disc;
}

#skills li{
	float: left;
	margin: 0 5px 5px 0;
	padding: 3px 10px ;
	font-weight: bold;
	font-size: 0.7em;
	background-color: rgba(52, 52, 52, 0.35);
	color: white;
}	

/* Links */
a{
	color: inherit;
	text-decoration: underline;
}a:hover{
	color: inherit;
	text-decoration: none;
}

.contact-icons ul li a{
	text-decoration: none;
}

#thanks p, #thanks h5{
	font-size: 0.9em;
	margin: 5px 0; 
} 

/* Footer Icons */

.heart{
	font-size: 1.5em;
}

/* select HEART*/
#made-with:hover :first-child{
	color: red;
}

.footer-row{
	padding-top: 15px;
}

.footer-row li{
	display: inline-block;
}

.footer-row ul>li>a {
    display: inline-block;
    width: 27px;
    height: 27px;
    font: 0/0 x;
    background-size: 27px 27px
}

.footer-facebook a{
	background-image: url('../assets/icons/Outlined/facebook.svg');
}
.footer-facebook a:hover{
	background-image: url('../assets/icons/Onhover/facebook_hover.svg');
}

.footer-github a{
	background-image: url('../assets/icons/Outlined/github.svg');
}
.footer-github a:hover{
	background-image: url('../assets/icons/Onhover/github_hover.svg');
}

.footer-mail a{
	background-image: url('../assets/icons/Outlined/mailbox.svg');
}
.footer-mail a:hover{
	background-image: url('../assets/icons/Onhover/mailbox_hover.svg');
}

.footer-linkedin a{
	background-image: url('../assets/icons/Outlined/linkedin.svg');
}
.footer-linkedin a:hover{
	background-image: url('../assets/icons/Onhover/linkedin_hover.svg');
}

.footer-instagram a{
	background-image: url('../assets/icons/Outlined/instagram.svg');
}
.footer-instagram a:hover{
	background-image: url('../assets/icons/Onhover/instagram_hover.svg');
}

/* @media queries
		
		adapts the layout for devices with less than 780px width */

 /* mobile devices : portrait orientation */
@media only screen and (max-device-width: 770px) and (orientation: portrait){
	
	/* makes profile full-screen */
	#profile{
		width: 100vw;
		height: 100vh;
		max-height: 1124px;
		position: relative;
		display: block;
		overflow: hidden;
	}

	#info-holder{
		vertical-align: middle;
	}

	#profession{
		font-size: 0.6em;
	}

	#profile-name{
		margin-top: 10px;
		margin-bottom: 0;
		font-size: 31px;
	}

	.profile-hr{
		margin-top: 25px;
		margin-bottom: 25px;
	}
	
	/* makes resume full-width and resets positioning */
	#resume{
		left: 0;
		width: 100%;
		overflow: initial;
	}

}

@media (max-width: 720px) {

	.resume-item{
		padding: 2.5em;
		max-width: 100vw;
		display: block;
	}

	.resume-item .subject, 
	.resume-item .description{
		max-width: 100vw;
		width: 100vw;

		display: block;
	}

	.resume-item .description{
		margin: 0;
		width: 100%;
		line-height: 0;
	}

	.resume-item .subject h3{
		margin-bottom: 30px;
		font-size: 1em;
	}

	.job-item{
		display: block;
	}

	.job-position{
		width: 100%;
	}
	.job-description{
		margin: 0;
		width: 100%;
	}

	.job-position + .job-description {
		margin-bottom: 2.5em;
	}

	p + .smaller{
		margin: 5px 0 15px 0;
		font-size: 0.8em;
	}
}

/* make resume content fullscreen */
@media (max-width: 1024px) and (orientation : landscape) {

	/* makes resume full-width and resets positioning */
	#resume{
		left: 0;
		width: 100%;
		overflow: initial;
	}


	#profile{
		height: 100vh;
		max-height: 414px;
		width: 100%;
		position: relative;
	}


	#profile-container{
		width: 100vw;
		max-width: 740px;
		height: 100vh;
		max-height: 414px;
		margin: 0 auto;
	}

	#info{
		display: table;
		vertical-align: middle;
		height: 100vh;
		max-height: 414px;
	}

	#img-profile-holder{
		max-height: 414px;
		position: relative;
	}

	#img-profile-holder a {
		position: relative;
	}

	#img-profile-holder a img{
		height: 100%;
	}
	
	#profile-gradient{
		display: none;
	}

	.contact-icons{
		position: relative;
	}

	.contact-icons ul li a img{
		height: 1.5em;
		margin: 8px;
		position: relative;
		margin-top: 3em;
	}

}

